--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -77,12 +77,13 @@
                 }
             }
         );
+        
         var xhr = new XMLHttpRequest();
         xhr.open(form.method, form.action, true);
         xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
-        xhr.send(JSON.stringify(formData));
-
-        document.location.href = "/home.html?name=" + encodeURIComponent(formData.userName) + "&country=" + encodeURIComponent(formData.userCountry);
+        xhr.onreadystatechange = () => {
+            document.location.href = "/home.html?name=" + encodeURIComponent(formData.userName) + "&country=" + encodeURIComponent(formData.userCountry);
+        };
     }
 
     document.getElementById('inscription').onsubmit = function() {
