Correct return value of matches api

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,8 +28,8 @@
                         <input type="text" class="form-control" id="userName">
                     </div>
                     <div class="mb-3">
-                        <label for="userTweeter" class="form-label">Twitter</label>
-                        <input type="text" class="form-control" id="userTweeter">
+                        <label for="userTwitter" class="form-label">Twitter</label>
+                        <input type="text" class="form-control" id="userTwitter">
                     </div>
                     <div class="mb-3">
                         <label for="userCountry" class="form-label">Pays</label>
